fix: search overlay on mobile

--- a/app/sass/layout/_header.scss
+++ b/app/sass/layout/_header.scss
@@ -97,6 +97,8 @@
       width: 100%;
       height: 100%;
       box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.05);
+      border-bottom-right-radius: 23px;
+      border-bottom-left-radius: 23px;
     }
 
     @include bpu(769) {
